--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.11",
+    "postcss": "^8.4.38",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vercel": "^46.0.0"
   }
